<resources>
    <string name="app_name">PioSpa</string>
    <string name="some_error" translatable="false">Some error</string>
    <!--===========================LOGIN=====================================-->
    <string name="google">Google</string>
    <string name="login">Đăng nhập</string>
    <string name="register">Đăng kí</string>
    <string name="facebook">Facebook</string>
    <string name="password">Mật khẩu</string>
    <string name="username">Tên đăng nhập</string>
    <string name="comfirm_password">Xác nhận mật khẩu</string>
    <!--===========================REGISTER=====================================-->
    <string name="already_has_account">Bạn đã có tài khoản</string>
    <!--===========================TOOLBAR TITLE=====================================-->
    <string name="title_cart">Giỏ hàng</string>
    <string name="title_service">Dịch vụ</string>
    <string name="title_product">Sản phẩm</string>
    <!--===========================PRODUCT=====================================-->
    <string name="add">Thêm</string>
    <string name="more">THÊM</string>
    <string name="remove">Xóa</string>
    <string name="add_cart">Thêm Giỏ hàng</string>
    <string name="product_image">Ảnh sản phẩm</string>
    <!--===========================SERVICE=====================================-->
    <string name="service_image">Ảnh dịch vụ</string>
    <!--===========================CART=====================================-->
    <string name="total">Tổng tiền</string>
    <!--===========================NAVIGATION=====================================-->
    <string name="other">Khác</string>
    <string name="order">Đơn hàng</string>
    <string name="service">Dịch vụ</string>
    <string name="product">Sản phẩm</string>
    <string name="logout">Đăng xuất</string>
    <string name="account">Tài khoản</string>
    <string name="check_out">Đặt hàng</string>
    <string name="change_password">Đổi mật khẩu</string>
    <!--===========================BOOKING=====================================-->
    <string name="email">Email</string>
    <string name="note">Ghi chú</string>
    <string name="booking">Đặt hẹn</string>
    <string name="comfirm">Xác nhận</string>
    <string name="full_name">Họ và tên</string>
    <string name="phone">Số điện thoại</string>
    <string name="time_booking">Giờ hẹn</string>
    <string name="date_booking">Ngày hẹn</string>


    <string name="action_settings">Cài đặt</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="pick_time">Chọn thời gian</string>
    <string name="cancel">Hủy</string>
    <string name="price">Giá</string>
    <string name="can_booking">Có thể đặt hẹn</string>
    <!-- Error message -->
    <string-array name="arr_step">
        <item>Địa chỉ</item>
        <item>Hình thức thanh toán</item>
        <item>Xác nhận</item>
    </string-array>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_full_name">Điền họ và tên</string>
    <string name="enter_phone">Điền số điện thoại</string>
    <string name="province">Tỉnh/Thành phố</string>
    <string name="enter_province">Điền tỉnh/thành phố</string>
    <string name="district">Quận/Huyện</string>
    <string name="enter_district">Điền quận/huyện</string>
    <string name="ward">Phường/Xã</string>
    <string name="enter_ward">Điền phường/xã</string>
    <string name="specific_address">Địa chỉ cụ thể</string>
    <string name="address">Địa chỉ</string>
    <string name="address_note">Số nhà, tên toà nhà, tên khu vực</string>
    <string name="enter_address">Điền địa chỉ cụ thể</string>
    <string name="delivery_type">Loại hình giao hàng</string>
    <string name="payment_type">Hình thức thanh toán</string>
    <string name="next">Tiếp theo</string>
    <string name="previous">Quay lại</string>
    <string name="quanlity">Số lượng</string>


    <string name="transition_background" translatable="false">background</string>
    <string name="transition_card" translatable="false">card</string>
    <string name="transition_avatar_border" translatable="false">avatar_border</string>
    <string name="details_connect">Kết nối</string>
    <string name="show_order">Xem đơn hàng</string>
    <string name="icon">icon</string>
    <string name="not_payment">Chưa thanh toán</string>
    <string name="payment">Đã thanh toán</string>
    <string name="birth_day">Ngày sinh</string>
    <string name="gender">Giới tính</string>
    <string name="payment_info">Thông tin thanh toán</string>
    <string name="ship">Phí vận chuyển</string>
    <string name="update">Cập nhật</string>
    <string name="old_pasword">Mật khẩu cũ</string>
    <string name="new_password">Mật khẩu mới</string>

    <string name="loading">Tải dữ liệu</string>
    <string name="message">Thông báo</string>
    <string name="loading_cacel_order">Hủy đơn hàng</string>
    <string name="loading_cacel_order_failed">Hủy thất bại</string>
    <string name="cart_empty_message">Giỏ hàng hiện rỗng, vui lòng mua hàng trước khi thanh toán</string>
    <string name="message_quit_app">Bạn có muốn thoát ứng dụng</string>
    <string name="ok">Đồng ý</string>
    <string name="message_username_empty">Vui lòng nhập vào tên đăng nhập</string>
    <string name="message_pwd_empty">Vui lòng nhập vào mật khẩu</string>
    <string name="minute">phút</string>
    <string name="message_booking_date_empty">Chọn ngày đặt hẹn</string>
    <string name="message_time_booking_empty">Chọn giờ đặt hẹn</string>
    <string name="_in_cart">vào giỏ hàng</string>
    <string name="message_change_pwd_success">Đổi mật khẩu thành công</string>
    <string name="message_old_password_empty">Vui lòng nhập vào mật khẩu cũ</string>
    <string name="message_new_pwd_empty">Vui lòng nhập vào mật khẩu mới</string>
    <string name="message_pwd_invalid">Mật khẩu ít nhất 5 kí tự</string>
    <string name="message_pwd_comfirm_empty">Vui lòng nhập vào xác nhận mật khẩu</string>
    <string name="message_old_pwd_invlid">Mật khẩu cũ không đúng</string>
    <string name="message_pwd_and_pwd_comfirm_not_same">Mật khẩu xác nhận không giống mật khẩu mới</string>
    <string name="order_detail">Chi tiết đơn hàng</string>
    <string name="order_id">Hóa đơn số:</string>
    <string name="created_at">Ngày tạo:</string>
    <string name="status">Trạng thái:</string>
    <string name="profile">Thông tin cá nhân</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="message_fullname_empty">Nhập vào họ và tên</string>
    <string name="message_username_invalid">Tài khoản ít nhất 5 kí tự a-zA-Z0-9._-</string>
    <string name="update_profile">Cập nhật thông tin</string>
    <string name="enter_fullname">Nhập họ và tên</string>
    <string name="enter_email">Nhập địa chỉ email</string>
    <string name="choose_gender">Chọn giới tính</string>
    <string name="text_male">Nam</string>
    <string name="text_female">Nữ</string>
    <string name="require_camera_permission">Ứng dụng không có quyền mở máy ảnh</string>
    <string name="require_store_permission">Ứng dụng không có quyền truy cập bộ nhớ</string>
    <string name="message_province_empty">Vui lòng chọn tỉnh/thành phố trước.</string>
    <string name="message_district_empty">Vui lòng chọn quận/huyện trước.</string>
    <string name="message_data_not_change">Không có dữ liệu được thay đổi</string>
    <string name="wrong">không đúng</string>
    <string name="save_change">Lưu thay đổi?</string>
    <string name="amount">Số lượng</string>
    <string name="number_customer">Số khách</string>
    <string name="seen_more">Xem thêm</string>
    <string name="lower_product">sản phẩm</string>
    <string name="camera">Máy ảnh</string>
    <string name="album">Bộ sưu tập</string>
    <string name="choose_image">Chọn Ảnh</string>
    <string name="added">Đã thêm</string>
    <string name="shopping_cart_empty">Giỏ hàng rỗng</string>
    <string name="product_shoping_cart_empty">Không có sản phẩm nào được chọn</string>
    <string name="service_shoping_cart_empty">Không có dịch vụ nào được chọn</string>
    <string name="shipping_address">Thông tin khách hàng</string>
    <string name="booking_product">Sản phẩm đã đặt</string>
    <string name="booking_service">Dịch vụ đã đặt</string>
    <string name="tax">Thuế</string>
    <string name="touch_to_change">Chạm để thay đổi</string>
    <string name="order_empty">Không có hóa đơn nào được tạo</string>
    <string name="scan_barcode">Quét QRCode</string>
    <string name="message_respons_scan_qrcode_failed">Không tìm thấy sản phẩm</string>
    <string name="scan_qrcode_failed">Không thể quét được code,vui lòng thử lại</string>
    <string name="scan_qrcode">Tìm kiếm sản phẩm</string>
    <string name="create_order">Tạo hóa đơn</string>
    <string name="create_order_failed">Đặt hàng thất bại</string>
    <string name="delivery_type_empty">Vui lòng chọn hình thức giao hàng</string>
    <string name="payment_type_empty">Vui lòng chọn hình thức thanh toán</string>
    <string name="message_phone_empty">Vui lòng nhập vào số điện thoại</string>
    <string name="message_ward_empty">Vui lòng chọn phường/xã</string>
    <string name="message_specific_address_empty">Vui lòng nhập địa chỉ cụ thể</string>


    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <!--
        This is the name that users will see when interacting with this channel.
        It should describe the category of notifications that will be sent through this channel
     -->
    <string name="default_notification_channel_name" translatable="true">News</string>
    <string name="msg_subscribe_failed">Failed to subscribe to news topic</string>
    <string name="msg_subscribed">Subscribed to news topic</string>
    <string name="msg_unsubscribe_failed">Failed to unsubscribe to the topic</string>
    <string name="msg_unsubscribed">Unsubscribed to the topic</string>
    <string name="load_data_failed_message">Tải dữ liệu thất bại</string>
    <string name="uploading">Cập nhật thông tin...</string>
    <string name="save_successed">Lưu thành công</string>
    <string name="upload_failed">Cập nhật dữ liệu thất bại</string>
    <string name="select_avatar">Chọn ảnh...</string>



</resources>
