<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_order"
            android:icon="@drawable/ic_order_dark"
            android:title="@string/order" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_user_dark"
            android:title="@string/account" />
    </group>

    <item android:title="@string/other">
        <menu>
            <item
                android:id="@+id/nav_change_password"
                android:icon="@drawable/ic_change_password"
                android:title="@string/change_password" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>
