<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">



    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_20">
        <RadioButton
            android:id="@+id/rbMale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_male"
            android:checked="true"/>
        <RadioButton
            android:id="@+id/rbFeMale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_female"/>
    </RadioGroup>


    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="@dimen/margin">

        <Button
            android:id="@+id/btnCancel"
            android:layout_marginRight="@dimen/margin_20"
            android:textColor="@android:color/white"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:background="@drawable/button_selector_none_radius"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/btnOk"
            android:layout_marginLeft="@dimen/margin_20"
            android:textColor="@android:color/white"
            android:text="@string/ok"
            android:textAllCaps="false"
            android:background="@drawable/button_selector_none_radius"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>



</LinearLayout>
