<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/margin">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/product_image"
            android:padding="@dimen/padding"
            android:src="@drawable/paceholder"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.3" />

        <TextView
            android:id="@+id/txtName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/body_text_size"
            app:layout_constraintBottom_toTopOf="@+id/txtPrice"
            app:layout_constraintStart_toEndOf="@+id/img"
            app:layout_constraintTop_toTopOf="@+id/img"
            app:layout_constraintEnd_toEndOf="@+id/txtTotal"/>

        <TextView
            android:id="@+id/txtQuanlity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="@dimen/body_text_size"
            android:minWidth="30dp"
            android:textAlignment="center"
            app:layout_constraintStart_toEndOf="@+id/btnPositive"
            app:layout_constraintTop_toBottomOf="@+id/txtPrice"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnNegative"/>

        <TextView
            android:id="@+id/txtPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="@dimen/body_text_size"
            app:layout_constraintStart_toStartOf="@+id/txtName"
            app:layout_constraintTop_toBottomOf="@+id/txtName"
            app:layout_constraintBottom_toTopOf="@+id/btnPositive" />

        <TextView
            android:id="@+id/lbTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin"
            android:textStyle="bold"
            android:text="@string/total"
            android:textSize="@dimen/body_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txtPrice"
            android:layout_marginEnd="@dimen/margin" />

        <TextView
            android:id="@+id/txtTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="@dimen/body_text_size"
            android:layout_marginRight="@dimen/margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txtQuanlity"
            android:layout_marginEnd="@dimen/margin" />

        <ImageButton
            android:id="@+id/btnPositive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add"
            android:background="@color/white"
            android:padding="0dp"
            android:contentDescription="@string/add"
            app:layout_constraintStart_toEndOf="@+id/txtQuanlity"
            app:layout_constraintTop_toBottomOf="@+id/txtPrice"
            app:layout_constraintBottom_toBottomOf="parent" />

        <ImageButton
            android:id="@+id/btnNegative"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="0dp"
            android:src="@drawable/ic_remove"
            android:background="@color/white"
            android:contentDescription="@string/remove"
            app:layout_constraintStart_toStartOf="@+id/txtName"
            app:layout_constraintTop_toBottomOf="@+id/txtPrice"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>
